--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@remix-run/serve": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.3"
+    "remix": "^1.3.3",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.3",
