--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -o ./app/tailwind.css",
-    "dev": "concurrently \"npm:dev:css\" \"remix dev\"",
+    "dev": "concurrently \"npm:dev:css\" \"remix dev\" \"npm:json-server\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@remix-run/react": "^1.3.3",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^17.0.9",
     "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
+    "json-server": "^0.17.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   },
